Update personal tenets

--- a/src/articles/personal-tenets.mdx
+++ b/src/articles/personal-tenets.mdx
@@ -1,63 +1,75 @@
 ---
 title: Personal tenets
-description: Active guidelines that help me improve.
-date: 2021-08-30
+description: How I approach hard choices
+date: 2022-07-24
 faIcon: faMugHot
 ---
 
 import { Card } from "../components"
 
-This entire section builds off of two concepts which are important to state explicitly: Firstly,
-you can improve yourself to lead a fuller, happier life. Self improvement requires
-conscious, active effort.
-
-The way I try to consciously get better starts with writing down what I want to strive towards and what I strongly resonate with. I then turn those thoughts into a list of tenets which evolves as I grow.
+This is a personal list of [tenets](), which help me think through my priorities and help me make difficult decisions.
 
 <span className="text-sm quicksand">
-  This specific list is aimed at my personal strengths and weaknesses. I don't
-  expect others to follow the same principles, this is just what's worked the
-  best for me so far.
+  I don't expect others to have the same priorities or make the same decisions.
+  These tenets are specifically aimed at my personal strengths and weaknesses.
 </span>
 
 <div className="mb-8"></div>
 
+<span className="text-sm quicksand">
+  I want to stress that these help make tough decisions. They are less useful
+  for situations where the choice or tradeoff is clear.
+</span>
+
+<div className="mb-8"></div>
+
+<h2 className="quicksand">Unless you know better, favour...</h2>
+
 <Card heading="People over _">
 
-**Life is richer alongside others.** Don't be a dick to them. Enjoy their company. Learn from them.
-
-**Most are striving for better.** Start by assuming others
-have good intentions even if their intentions are different from yours. Frame your
-perspective to work with, not against/through/around them.
-
-<span className="text-sm">Most of my tenets feed to/from this one</span>
+Everything we do stems from people and is meant for people. Their needs take precedence.
+Favour choices that empower, enable or elevate people over most other choices.
 
 </Card>
 
-<Card heading="Learning over correctness">
+<Card heading="Transparency over clarity">
 
-**We have incomplete information.** Acknowledge this as a constant and actively look
-for, and genuinely consider, new information.
-
-**You only get better by being wrong.** Try to fail small and within a controlled environment, and try to fail frequently.
+If others know about your challenges, they can help you overcome them.
+Favour communication choices that allow others to know what is going on over those that try to reduce noise.
 
 </Card>
 
-<Card heading="Team progress over individual ambition">
+<Card heading="Momentum over correctness">
 
-**Great things can't be achieved alone.** Primarily driving the collective goal is more valuable than focusing on individual achievements.
-
-**Teams are made of individuals.** Care about the individuals if you want the team to flourish.
+It is more important to keep moving than to guarantee correctness at every step. Favour the choice that builds more momentum.
 
 </Card>
 
-<Card heading="Authenticity over consensus">
+<Card heading="Learning over short-term success">
 
-**Saying something is more valuable than keeping quiet.** You may be the only one that
-thought of it. Someone else may not raise the point you want to talk about. If you're
-uncomfortable with a decision / in a bad mood / disappointed, raise it.
+Sustainable success requires lessons to be learned and experience to be built up.
+This is more important than continual short-term success.
+Favour the choice that enables you to gather more knowledge.
 
-**Your strengths are differences by definition.** Don't hide them, play to them.
+</Card>
 
-**Strong feelings are legitimate.** Acknowledge them and make plans to accommodate them.
+<Card heading="Feedback over intuition">
+
+You can't build a successful business without exposing yourself to customer feedback.
+Favour the choice that gives more exposure to that feedback.
+
+</Card>
+
+<Card heading="Iteration over polish">
+
+Building the right thing in the long term requires iterating on product decisions.
+Favour the choice that allows you to try something new with the product over polishing an existing feature.
+
+</Card>
+
+<Card heading="Delivery over control">
+
+We can't scale by trying to do everything ourselves.
+Favour the choice that maximises delivery over the one that maximises your ability to control details.
 
 </Card>
