Fix link in tenets

--- a/src/articles/personal-tenets.mdx
+++ b/src/articles/personal-tenets.mdx
@@ -7,7 +7,7 @@ faIcon: faMugHot
 
 import { Card } from "../components"
 
-This is a personal list of [tenets](), which help me think through my priorities and help me make difficult decisions.
+This is a personal list of [tenets](https://www.merriam-webster.com/dictionary/tenet), which help me think through my priorities and help me make difficult decisions.
 
 <span className="text-sm quicksand">
   I don't expect others to have the same priorities or make the same decisions.
