--- a/src/articles/unwronging.mdx
+++ b/src/articles/unwronging.mdx
@@ -7,33 +7,8 @@ faIcon: faDna
 
 import { Card } from "../components"
 
-**TLDR** The fastest way to correct issues/biases in society as a whole is to have individuals who actively seek to course-correct themselves.
-
-<Card heading="Unwronging">
-  <p className="text-sm">
-    <i>verb</i>
-  </p>
-  <p>The conscious and systematic act of becoming less and less wrong.</p>
-  <p>
-    <b>Similar:</b>
-    <i> improving, progressing, evolving, learning, adapting</i>
-  </p>
-</Card>
-
-<p>
-  Yeah, I made up that definition. But I think it conveys what I want to
-  communicate.
-</p>
-
-This is a thought exercise for how we correct/adjust our positions as a society. Starting with
-what helps us course-correct in the long-term and stepping through successively faster mechanisms.
-
 ![](./images/unwronging.png)
 
-My takeaway that the individual ability to self-correct is the quickest way for us as a whole to get better.
-
-This requires us to consciously and systematically:
-
-1. acknowledge that we will often be wrong
-1. look for feedback and new information to understand when we are likely to wrong
-1. tweak our behaviour according to new information
+We progress faster as a collective if we work to get better as individuals.
+We get better individually by actively looking for where we might be wrong/incomplete, acknowledging ignorance, and taking steps to address or mitigate this ignorance.
+The process is active; it requires conscious, directed effort.
