Fix typo in monoids

--- a/src/articles/monoids.mdx
+++ b/src/articles/monoids.mdx
@@ -10,7 +10,7 @@ In this document we'll briefly go through how we can use the mathematical concep
 # Why should I care about composition?
 
 Composition is the idea that complex problems can be solved by combining the solutions of many simpler problems.
-This idea is a fundamental oen in programming, where complex software that would be impossible for any individual programmer to tackle can
+This idea is a fundamental one in programming, where complex software that would be impossible for any individual programmer to tackle can
 be built up of individual small programs that are easy to reason about/program/test.
 
 Given the importance of composition in our field, having knowledge of techniques that enable composition can enable you build software faster, safer and more maintainably.
