Fix recommended reading link

--- a/src/articles/system-operational-investment.mdx
+++ b/src/articles/system-operational-investment.mdx
@@ -33,7 +33,7 @@ Thinking about investing into capabilities for improving scalability and feature
 
 <Card heading="Recommended reading">
 
-This article also builds on terms and concepts introduced in .
+This article also builds on terms and concepts introduced in <Link to="/articles/operational-observability">operational observability</Link>.
 I recommend that you skim through that article before continuing.
 
 </Card>
