--- a/src/articles/inexpensive-mechanisms.mdx
+++ b/src/articles/inexpensive-mechanisms.mdx
@@ -22,10 +22,10 @@ import { PullQuote } from "../components"
 
 ## Tenets
 
-<p className="text-lg">
+<span className="text-lg">
   A prioritized set of team defaults for how to resolve tension between
   incompatible requirements.
-</p>
+</span>
 
 <PullQuote>Prioritize the things we care the most about.</PullQuote>
 
