--- a/src/articles/pattern-producer-consumer.mdx
+++ b/src/articles/pattern-producer-consumer.mdx
@@ -8,11 +8,11 @@ date: 2022-01-17
 import { Link } from "gatsby"
 import ProducerConsumerSequenceDiagram from "./images/producer-consumer-sequence.svg"
 
-<p>
+<div>
   <b>TLDR</b> "Producer" and "consumer" form a{" "}
   <Link to="/articles/patterns">pattern</Link> which enables systems to decouple
   generation of work from processing of work.
-</p>
+</div>
 
 # Problem/context
 
