--- a/src/articles/personal-financial-thoughts.mdx
+++ b/src/articles/personal-financial-thoughts.mdx
@@ -10,14 +10,14 @@ import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
 import { faExclamationTriangle } from "@fortawesome/free-solid-svg-icons"
 
 <Disclaimer heading="The author is not a financial advisor/consultant/professional.">
-  <p>
+  <div>
     These are my notes, kept for my reference and use. They are in no way to be
     considered advice, educational, or prescriptive.
-  </p>
-  <p>
+  </div>
+  <div>
     Please do your own independent research and consult a financial advisor if
     you require financial advice.
-  </p>
+  </div>
 </Disclaimer>
 
 <Card heading="Core principles">
