Order articles by date published

--- a/src/articles/aws-basic-serverless.mdx
+++ b/src/articles/aws-basic-serverless.mdx
@@ -3,6 +3,7 @@ title: A basic serverless website on AWS with Auth fronting the CDN
 description: An architectural pattern for an AWS serverless website that performs authentication and authorization in front of the CDN.
 faIcon: faCloud
 date: 2019-06-01
+lastEdit: 2019-06-01
 ---
 
 import GeneralArchitecture from "./images/serverless-site-with-cdn-auth-general.svg"
