--- a/src/articles/discord-bot-flow.mdx
+++ b/src/articles/discord-bot-flow.mdx
@@ -2,6 +2,7 @@
 title: Discord bot flow
 description: The sequence of actions taken by a chatbot.
 date: 2020-04-19
+lastEdit: 2020-04-19
 faIcon: faRobot
 ---
 
