--- a/src/articles/gatsby-notes.mdx
+++ b/src/articles/gatsby-notes.mdx
@@ -2,7 +2,8 @@
 title: Rough notes working with Gatsby
 description: Notes from building this site on Gatsby.
 faIcon: faHammer
-date: 2021-01-09
+date: 2021-09-01
+lastEdit: 2022-01-09
 ---
 
 Theses are some notes from building this site using [Gatsby JS](https://www.gatsbyjs.com/).
