--- a/src/articles/java-notes.mdx
+++ b/src/articles/java-notes.mdx
@@ -3,6 +3,7 @@ title: Rough notes working with Java
 description: Some loosely organised notes for Java concepts and context which may prove useful to refer to later.
 faIcon: faCoffee
 date: 2022-07-23
+lastEdit: 2022-07-23
 tocDepth: 2
 ---
 
