--- a/src/articles/javascript-scope.mdx
+++ b/src/articles/javascript-scope.mdx
@@ -2,7 +2,8 @@
 title: Scope in JavaScript
 description: A brief overview of scope in javascript.
 faIcon: faWindowRestore
-date: 2021-12-28
+date: 2021-08-21
+lastEdit: 2021-12-28
 ---
 
 Many bugs in programming arise from a misunderstanding of how scope is structured and how it can change. This page is a quick reference to help understand how scope behavies in JavaScript.
