--- a/src/articles/load-shedding-throttling.mdx
+++ b/src/articles/load-shedding-throttling.mdx
@@ -2,6 +2,7 @@
 title: Request throttling
 description: Request throttling is selectively refusing requests to protect a system from being overwhelmed by demand.
 date: 2019-05-26
+lastEdit: 2019-05-26
 faIcon: faTrafficLight
 ---
 
