--- a/src/articles/machine-setup.mdx
+++ b/src/articles/machine-setup.mdx
@@ -2,6 +2,7 @@
 title: Machine playbook
 description: How I get back up and running on a freshly formatted machine.
 date: 2020-08-31
+lastEdit: 2020-08-31
 faIcon: faDesktop
 ---
 
