--- a/src/articles/manipulate-this.mdx
+++ b/src/articles/manipulate-this.mdx
@@ -3,6 +3,7 @@ title: Manipulating this with call, apply and bind
 description: Ways to specify what the JavaScript "this" keyword points to.
 faIcon: faRecycle
 date: 2019-09-07
+lastEdit: 2019-09-07
 ---
 
 # What this is and why you should care
