--- a/src/articles/musical-modes.mdx
+++ b/src/articles/musical-modes.mdx
@@ -2,6 +2,7 @@
 title: Musical modes
 description: A reference sheet for the 7 musical modes.
 date: 2020-02-16
+lastEdit: 2020-02-16
 faIcon: faMusic
 ---
 
