--- a/src/articles/operational-observability.mdx
+++ b/src/articles/operational-observability.mdx
@@ -1,7 +1,8 @@
 ---
 title: System observability
 description: Things to measure/capture in your systems.
-date: 2022-01-15
+date: 2022-01-04
+lastEdit: 2022-01-20
 faIcon: faRuler
 tocDepth: 2
 ---
