--- a/src/articles/pattern-builder.mdx
+++ b/src/articles/pattern-builder.mdx
@@ -3,6 +3,7 @@ title: Builder
 description: A reference for builder pattern.
 faIcon: faShapes
 date: 2021-12-27
+lastEdit: 2021-12-27
 ---
 
 import { Link } from "gatsby"
