--- a/src/articles/pattern-interceptor.mdx
+++ b/src/articles/pattern-interceptor.mdx
@@ -3,6 +3,7 @@ title: Interceptor
 description: A reference for interceptor pattern.
 faIcon: faShapes
 date: 2021-12-24
+lastEdit: 2021-12-24
 ---
 
 import { Link } from "gatsby"
