--- a/src/articles/pattern-pubsub.mdx
+++ b/src/articles/pattern-pubsub.mdx
@@ -3,6 +3,7 @@ title: Publisher-Subscriber
 description: A reference for the publisher-subscriber pattern.
 faIcon: faShapes
 date: 2021-12-28
+lastEdit: 2021-12-28
 ---
 
 import { Link } from "gatsby"
