--- a/src/articles/pattern-strategy.mdx
+++ b/src/articles/pattern-strategy.mdx
@@ -3,6 +3,7 @@ title: Strategy
 description: A reference for the strategy pattern.
 faIcon: faShapes
 date: 2021-12-27
+lastEdit: 2021-12-27
 ---
 
 import { Link } from "gatsby"
