--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -2,10 +2,10 @@
 title: Patterns
 description: My reference index for patterns.
 faIcon: faShapes
-date: 2022-07-24
+date: 2021-12-26
+lastEdit: 2022-07-24
 ---
 
-import { Link } from "gatsby"
 import { PatternArticleList } from "../components"
 
 This is my own reference-sheet for patterns. The aim is to make my own vocabulary explicit to align with others and to enhance my knowledge over-time.
