--- a/src/articles/personal-financial-thoughts.mdx
+++ b/src/articles/personal-financial-thoughts.mdx
@@ -3,11 +3,10 @@ title: Financial thoughts
 description: Quick notes and tools.
 faIcon: faEuroSign
 date: 2021-12-28
+lastEdit: 2021-12-28
 ---
 
 import { Card, Disclaimer } from "../components"
-import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
-import { faExclamationTriangle } from "@fortawesome/free-solid-svg-icons"
 
 <Disclaimer heading="The author is not a financial advisor/consultant/professional.">
   <div>
