--- a/src/articles/redux-side-effects.mdx
+++ b/src/articles/redux-side-effects.mdx
@@ -2,6 +2,7 @@
 title: Side effects in React-Redux
 description: Some ways to perform side-effects in React-Redux.
 date: 2021-02-14
+lastEdit: 2021-02-14
 faIcon: faAtom
 ---
 
