--- a/src/articles/system-operational-investment.mdx
+++ b/src/articles/system-operational-investment.mdx
@@ -4,6 +4,7 @@ description: Paths along which we can evolve our systems to make them easier and
 faIcon: faSeedling
 tocDepth: 2
 date: 2022-06-22
+lastEdit: 2022-06-22
 ---
 
 import { Link } from "gatsby"
