--- a/src/articles/unwronging.mdx
+++ b/src/articles/unwronging.mdx
@@ -1,11 +1,10 @@
 ---
 title: Unwronging
 description: A thought exercise on progress.
-date: 2022-07-31
+date: 2021-08-31
+lastEdit: 2022-07-31
 faIcon: faDna
 ---
-
-import { Card } from "../components"
 
 ![](./images/unwronging.png)
 
