--- a/src/articles/inexpensive-mechanisms.mdx
+++ b/src/articles/inexpensive-mechanisms.mdx
@@ -2,7 +2,8 @@
 title: Inexpensive mechanisms to support team processes
 description: A list of mechanisms that are cheap to implement, but that empower valuable processes.
 faIcon: faPaperclip
-date: 2022-07-24
+date: 2021-09-02
+lastEdit: 2022-07-24
 tocDepth: 2
 ---
 
