Add GUIDs to the articles

--- a/src/articles/aws-basic-serverless.mdx
+++ b/src/articles/aws-basic-serverless.mdx
@@ -4,6 +4,7 @@ description: An architectural pattern for an AWS serverless website that perform
 faIcon: faCloud
 date: 2019-06-01
 lastEdit: 2019-06-01
+guid: f7fef9c2-8f6d-48ad-aef8-e7b258ec794d
 ---
 
 import GeneralArchitecture from "./images/serverless-site-with-cdn-auth-general.svg"
