--- a/src/articles/discord-bot-flow.mdx
+++ b/src/articles/discord-bot-flow.mdx
@@ -4,6 +4,7 @@ description: The sequence of actions taken by a chatbot.
 date: 2020-04-19
 lastEdit: 2020-04-19
 faIcon: faRobot
+guid: 2e600629-79cd-4a31-9a60-7a95f69a3e3d
 ---
 
 Discord bots login to Discord, similar to normal users and maintain a connection to Discord using WebSockets.
