--- a/src/articles/gatsby-notes.mdx
+++ b/src/articles/gatsby-notes.mdx
@@ -4,6 +4,7 @@ description: Notes from building this site on Gatsby.
 faIcon: faHammer
 date: 2021-09-01
 lastEdit: 2022-01-09
+guid: ee74573a-9d9b-4886-9967-793013d4a615
 ---
 
 Theses are some notes from building this site using [Gatsby JS](https://www.gatsbyjs.com/).
