--- a/src/articles/inexpensive-mechanisms.mdx
+++ b/src/articles/inexpensive-mechanisms.mdx
@@ -5,6 +5,7 @@ faIcon: faPaperclip
 date: 2021-09-02
 lastEdit: 2022-07-24
 tocDepth: 2
+guid: ea998ee8-1f2d-497e-aed5-730dd63c0fa4
 ---
 
 import { PullQuote } from "../components"
