--- a/src/articles/java-notes.mdx
+++ b/src/articles/java-notes.mdx
@@ -5,6 +5,7 @@ faIcon: faCoffee
 date: 2022-07-23
 lastEdit: 2022-07-23
 tocDepth: 2
+guid: f5f865c7-82fe-47f9-bc4a-0499a277c46c
 ---
 
 import { Card } from "../components"
