--- a/src/articles/load-shedding-throttling.mdx
+++ b/src/articles/load-shedding-throttling.mdx
@@ -4,6 +4,7 @@ description: Request throttling is selectively refusing requests to protect a sy
 date: 2019-05-26
 lastEdit: 2019-05-26
 faIcon: faTrafficLight
+guid: 77c58852-92b2-486e-902c-4c6c8d673e49
 ---
 
 **TLDR;** Request throttling\* is the technique of selectively refusing requests to protect a service from being overwhelmed by demand.
