--- a/src/articles/machine-setup.mdx
+++ b/src/articles/machine-setup.mdx
@@ -4,6 +4,7 @@ description: How I get back up and running on a freshly formatted machine.
 date: 2020-08-31
 lastEdit: 2020-08-31
 faIcon: faDesktop
+guid: 75735184-1f6e-46b0-8bfd-0adeeb3c3212
 ---
 
 I use this to get back to a semi-workable state on the sad (but frequent) occasions when I format my machine. I currently use [Ubuntu](https://ubuntu.com/).
