--- a/src/articles/manipulate-this.mdx
+++ b/src/articles/manipulate-this.mdx
@@ -4,6 +4,7 @@ description: Ways to specify what the JavaScript "this" keyword points to.
 faIcon: faRecycle
 date: 2019-09-07
 lastEdit: 2019-09-07
+guid: e82cbdfe-ac83-4af7-8670-66ed8859b227
 ---
 
 # What this is and why you should care
