--- a/src/articles/monoids.mdx
+++ b/src/articles/monoids.mdx
@@ -4,6 +4,7 @@ description: An intuitive look at a mathematical tool to guarantee composability
 faIcon: faCubes
 date: 2021-08-31
 lastEdit: 2022-01-09
+guid: 8e530e57-d03f-4381-9579-07b75fc15817
 ---
 
 In this document we'll briefly go through how we can use the mathematical concept of a monoid to help us design and build systems that enable composition.
