--- a/src/articles/musical-modes.mdx
+++ b/src/articles/musical-modes.mdx
@@ -4,6 +4,7 @@ description: A reference sheet for the 7 musical modes.
 date: 2020-02-16
 lastEdit: 2020-02-16
 faIcon: faMusic
+guid: a76811d3-4eb8-438c-9fae-e9c657e59505
 ---
 
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
