--- a/src/articles/operational-observability.mdx
+++ b/src/articles/operational-observability.mdx
@@ -5,6 +5,7 @@ date: 2022-01-04
 lastEdit: 2022-01-20
 faIcon: faRuler
 tocDepth: 2
+guid: bc1b74e7-4733-49ea-a4e9-c789a4f37053
 ---
 
 import { PullQuote } from "../components"
