--- a/src/articles/pattern-builder.mdx
+++ b/src/articles/pattern-builder.mdx
@@ -4,6 +4,7 @@ description: A reference for builder pattern.
 faIcon: faShapes
 date: 2021-12-27
 lastEdit: 2021-12-27
+guid: 43c3019a-2bd0-425a-aa98-7dd73de03632
 ---
 
 import { Link } from "gatsby"
