--- a/src/articles/pattern-factory.mdx
+++ b/src/articles/pattern-factory.mdx
@@ -4,6 +4,7 @@ description: A reference for factory patterns.
 faIcon: faShapes
 date: 2021-12-24
 lastEdit: 2021-12-24
+guid: 1b5bd28f-8b40-429c-b792-7a5dc15116f8
 ---
 
 import { Link } from "gatsby"
