--- a/src/articles/pattern-interceptor.mdx
+++ b/src/articles/pattern-interceptor.mdx
@@ -4,6 +4,7 @@ description: A reference for interceptor pattern.
 faIcon: faShapes
 date: 2021-12-24
 lastEdit: 2021-12-24
+guid: 65752743-7d0b-4ada-abd2-79a8dc1123aa
 ---
 
 import { Link } from "gatsby"
