--- a/src/articles/pattern-pubsub.mdx
+++ b/src/articles/pattern-pubsub.mdx
@@ -4,6 +4,7 @@ description: A reference for the publisher-subscriber pattern.
 faIcon: faShapes
 date: 2021-12-28
 lastEdit: 2021-12-28
+guid: 2afbec78-f372-4593-b6bf-bdc9409c122e
 ---
 
 import { Link } from "gatsby"
