--- a/src/articles/pattern-strategy.mdx
+++ b/src/articles/pattern-strategy.mdx
@@ -4,6 +4,7 @@ description: A reference for the strategy pattern.
 faIcon: faShapes
 date: 2021-12-27
 lastEdit: 2021-12-27
+guid: edc25e7e-38be-4eb4-b39a-cfa5e2df5e79
 ---
 
 import { Link } from "gatsby"
