--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -4,6 +4,7 @@ description: My reference index for patterns.
 faIcon: faShapes
 date: 2021-12-26
 lastEdit: 2022-07-24
+guid: ae5bb536-31b3-47de-affb-c30848e86314
 ---
 
 import { PatternArticleList } from "../components"
