--- a/src/articles/personal-tenets.mdx
+++ b/src/articles/personal-tenets.mdx
@@ -4,6 +4,7 @@ description: How I approach hard choices
 date: 2021-08-31
 lastEdit: 2022-07-24
 faIcon: faMugHot
+guid: 1cd90620-b698-4dd3-b5bf-0fa4255951dd
 ---
 
 import { Card } from "../components"
