--- a/src/articles/redux-unit-test-saga.mdx
+++ b/src/articles/redux-unit-test-saga.mdx
@@ -4,6 +4,7 @@ description: A method for unit testing a saga
 date: 2022-01-29
 lastEdit: 2022-01-29
 faIcon: faAtom
+guid: cdc8df96-c20b-48e8-bcab-952fa83cadc2
 ---
 
 import { Link } from "gatsby"
