--- a/src/articles/system-operational-investment.mdx
+++ b/src/articles/system-operational-investment.mdx
@@ -5,6 +5,7 @@ faIcon: faSeedling
 tocDepth: 2
 date: 2022-06-22
 lastEdit: 2022-06-22
+guid: a6892cb6-9010-4091-af51-456414e92059
 ---
 
 import { Link } from "gatsby"
