--- a/src/articles/unwronging.mdx
+++ b/src/articles/unwronging.mdx
@@ -4,6 +4,7 @@ description: A thought exercise on progress.
 date: 2021-08-31
 lastEdit: 2022-07-31
 faIcon: faDna
+guid: 7fae5781-6cbf-412c-a898-3dd517e208be
 ---
 
 ![](./images/unwronging.png)
