--- a/src/articles/javascript-scope.mdx
+++ b/src/articles/javascript-scope.mdx
@@ -4,6 +4,7 @@ description: A brief overview of scope in javascript.
 faIcon: faWindowRestore
 date: 2021-08-21
 lastEdit: 2021-12-28
+guid: 03ae05cc-9d97-4ad8-9df4-5f5600b3963c
 ---
 
 Many bugs in programming arise from a misunderstanding of how scope is structured and how it can change. This page is a quick reference to help understand how scope behavies in JavaScript.
