--- a/src/articles/pattern-producer-consumer.mdx
+++ b/src/articles/pattern-producer-consumer.mdx
@@ -4,6 +4,7 @@ description: A reference for the producer-consumer pattern.
 faIcon: faShapes
 date: 2022-01-17
 lastEdit: 2022-01-17
+guid: 180dfc7a-7db1-424c-959e-acc26a4fbd19
 ---
 
 import { Link } from "gatsby"
