--- a/src/articles/personal-financial-thoughts.mdx
+++ b/src/articles/personal-financial-thoughts.mdx
@@ -4,6 +4,7 @@ description: Quick notes and tools.
 faIcon: faEuroSign
 date: 2021-12-28
 lastEdit: 2021-12-28
+guid: d37dc360-86d5-4b1a-a58a-1ed1643d75ca
 ---
 
 import { Card, Disclaimer } from "../components"
