--- a/src/articles/redux-side-effects.mdx
+++ b/src/articles/redux-side-effects.mdx
@@ -4,6 +4,7 @@ description: Some ways to perform side-effects in React-Redux.
 date: 2021-02-14
 lastEdit: 2021-02-14
 faIcon: faAtom
+guid: d95cce73-db6b-4aa6-9792-34c9f2fc703b
 ---
 
 The default model for Redux-like architectures doesn't have a good mechanism to deal with side-effectful actions (e.g. API calls, I/O operations).
