Add picture to role mapping

--- a/src/articles/role-mapping.mdx
+++ b/src/articles/role-mapping.mdx
@@ -3,7 +3,7 @@ title: Role mapping for empowered development teams
 description: A proposal for establishing role expectations with a bias for getting things done.
 faIcon: faPeopleGroup
 date: 2024-02-21
-lastEdit: 2024-02-21
+lastEdit: 2024-02-22
 guid: 3e8e7c91-4479-4a2e-8a50-d540c5b503c1
 ---
 
@@ -41,6 +41,7 @@ This protocol aims to establish expectations for teams which have the following 
  - Roles that have few people enhance the speed/scale/quality of delivery without blocking it. They "tune the engine".
  - All roles are empowered and encouraged to deliver value. Minimal downtime due to alignment cross-roles or due to a missing role.
 
+![](./images/role-mapping.png)
 
 
 ## Further guidelines
