Update readability of role mapping post

--- a/src/articles/role-mapping.mdx
+++ b/src/articles/role-mapping.mdx
@@ -3,7 +3,7 @@ title: Role mapping for empowered development teams
 description: A proposal for establishing role expectations with a bias for getting things done.
 faIcon: faPeopleGroup
 date: 2024-02-21
-lastEdit: 2024-02-22
+lastEdit: 2024-02-27
 guid: 3e8e7c91-4479-4a2e-8a50-d540c5b503c1
 ---
 
@@ -15,15 +15,16 @@ Teams are made up of multiple different roles to allow us to divide labour. It e
 When done well, division of roles boosts productivity and raises the quality of work.
 
 The tradeoff is that team members become less effective at delivering value individually.
-Role division & specialization often also results in consolidating specific knowledge/ability into fewer individuals, 
-increasing the risk that the effectiveness of the group is impacted if a single individual is unable to make progress.
-Finally, bounding these risks requires members of the team to have a shared understanding of the roles and their expectations. 
-Miscommunication of responsibilities greatly increases all afore-mentioned risks.
-There are no industry standards or certification requirements for most roles within the tech industry.
+Specialization, by defnition, means that knowledge and capability are consolidated into fewer individuals, 
+which makes the group more prone to becoming blocked if these indivuals are not able to make progress with their tasks. 
+This high dependency on the output of other roles places a greater importance on aligning expectations between roles, as
+there is a strong possibilty that misaligned expectations will result in one role becoming blocking to another role. 
+Finally, getting this right is made harder by the lack of consistency around role definitions and expectations in today's tech industry, 
+so companies and teams need to define, align-on and implement their own systems of inter-dependent specializations.  
 
 ## The role-mapping protocol
 
-The following protocal can be used for setting explicit expectations within a multi-role team that are relevant to the team's context:
+The following protocol can be used for setting explicit expectations within a multi-role team that are relevant to the team's context:
 
 1. **Identify recurring tasks** that the team needs to complete in order to deliver value. These can be as broad or granular as needed, but bias for high-level tasks initially.
 Examples: prioritize customer asks, implement features, address support requests, define analytics requirements, own iteration process for the product lifecycle.
@@ -51,6 +52,6 @@ This protocol aims to establish expectations for teams which have the following 
 
 ## Limitations
 
- - The results of this protocol can result in expecations that are in tension with an individual's contractual expectations.
+ - The results of the mapping can highlight role expecations that are in tension with an individual's contractual expectations.
  - This protocol will not be effective with individuals that will not, or cannot, accomodate for alterations in role expectations.
  - This protocol assumes teams that are composed in majority by individuals that can deliver individually, which may have base requirements for professional skill and/or experience.
