--- a/src/articles/musical-modes.mdx
+++ b/src/articles/musical-modes.mdx
@@ -2,13 +2,14 @@
 title: Musical modes
 description: A reference sheet for the 7 musical modes.
 date: 2020-02-16
-lastEdit: 2020-02-16
+lastEdit: 2024-06-09
 faIcon: faMusic
 guid: a76811d3-4eb8-438c-9fae-e9c657e59505
 ---
 
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
 import { faCheckCircle } from "@fortawesome/free-solid-svg-icons"
+import { ModalScale } from "../components"
 
 <script
   src="https://kit.fontawesome.com/e7cef4976f.js"
@@ -89,3 +90,10 @@ Some observations:
 
 - There are 2 consecutive major chords in each mode. Their position w.r.t the root chord (a.k.a the I chord) is a good sign of what mode we're playing in. **e.g.** If your 1 chord is major and you play a major 7 chord, you're in Myxolidian. If your 1 and 2 chords are Major, you're in Lydian.
 - There are 3 major chords, even in minor scales. By focussing on them, it's possible to still play major/"happy" sounding chords, while allowing someone to solo using a minor scale. **e.g.** In Aeolian, you can focus on the 3, 6 and 7 chords, all of which are major, alongside with the minor 1 chord to make a more uplifting chord progression, despite being in the minor key.
+
+
+# Interactive scales
+
+This is a quick tool for finding notes of a specific scale.
+
+<ModalScale />
