Add diatonic chords to the interactive modal scale

--- a/src/articles/musical-modes.mdx
+++ b/src/articles/musical-modes.mdx
@@ -16,9 +16,15 @@ import { ModalScale } from "../components"
   crossorigin="anonymous"
 ></script>
 
-This is intended to be a reference sheet for the 7 musical modes.
+A reference sheet for the 7 musical modes.
 
 <div className="mb-8"></div>
+
+# Interactive scales
+
+This is a quick tool for finding notes of a specific scale. Read on for references around the theory.
+
+<ModalScale />
 
 # Pattern of intervals between notes
 
@@ -91,9 +97,3 @@ Some observations:
 - There are 2 consecutive major chords in each mode. Their position w.r.t the root chord (a.k.a the I chord) is a good sign of what mode we're playing in. **e.g.** If your 1 chord is major and you play a major 7 chord, you're in Myxolidian. If your 1 and 2 chords are Major, you're in Lydian.
 - There are 3 major chords, even in minor scales. By focussing on them, it's possible to still play major/"happy" sounding chords, while allowing someone to solo using a minor scale. **e.g.** In Aeolian, you can focus on the 3, 6 and 7 chords, all of which are major, alongside with the minor 1 chord to make a more uplifting chord progression, despite being in the minor key.
 
-
-# Interactive scales
-
-This is a quick tool for finding notes of a specific scale.
-
-<ModalScale />
